--- a/index.html
+++ b/index.html
@@ -729,8 +729,8 @@ function getCookie(varNavn) {
 	  TimesClicked++;
 	  
 	  //saves bar progress
-	  setCookie("barProg", barY);
-	  setCookie("barProg2", barYPos);
+	  setCookie("barProg", parseInt(barY));
+	  setCookie("barProg2", parseInt(barYPos));
 	  
 	  
 	  coinY = 200 - 25;
