--- a/index.html
+++ b/index.html
@@ -732,6 +732,9 @@ function getCookie(varNavn) {
 	  setCookie("barProg", parseInt(barY));
 	  setCookie("barProg2", parseInt(barYPos));
 	  
+	  setCookie("times", times);
+	  
+	  
 	  
 	  coinY = 200 - 25;
 		
