--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ function getCookie(varNavn) {
 	  setCookie("barProg", parseInt(barY));
 	  setCookie("barProg2", parseInt(barYPos));
 	  
-	  setCookie("times", times);
+	  setCookie("times", parseFloat(times));
 	  
 	  
 	  
