--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@ function getCookie(varNavn) {
 		image(infoImg,345,130,30,30);
 		image(infoImg,345,30,30,30);
 		//Times Clicked on Jar
-		text("Times Clicked: " + TimesClicked,15,115);
+		text("Times Clicked: " + TimesClicked + "debug:" + times,15,115);
 		//clear button
 	  fill(255, 0, 0);
 	  rect(460, 0, 40, 10);
