--- a/index.html
+++ b/index.html
@@ -604,19 +604,19 @@ function getCookie(varNavn) {
 	 if (getCookie("barProg") === 0) {
 	 var barY = 0;
 	 } else {
-	 var barY = getCookie("barProg");
+	 int barY = getCookie("barProg");
 	 }
 	 
 	 if (getCookie("barProg2") === 0) {
 	 var barYPos = 420;
 	 } else {
-	 var barYPos = getCookie("barProg2");
+	 int barYPos = getCookie("barProg2");
 	 }
 	 
 	 if (getCookie("times") === 0) {
 	 var times = 0.25;
 	 } else {
-	 var times = getCookie("times");
+	 float times = getCookie("times");
 	 }
 	 
 	 //BarBackground
