--- a/index.html
+++ b/index.html
@@ -604,13 +604,13 @@ function getCookie(varNavn) {
 	 if (getCookie("barProg") === 0) {
 	 var barY = 0;
 	 } else {
-	 int barY = getCookie("barProg");
+	 var barY = getCookie("barProg");
 	 }
 	 
 	 if (getCookie("barProg2") === 0) {
 	 var barYPos = 420;
 	 } else {
-	 int barYPos = getCookie("barProg2");
+	 var barYPos = getCookie("barProg2");
 	 }
 	 
 	 if (getCookie("times") === 0) {
