--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ function getCookie(varNavn) {
 	 var tvNumber = 0;
 	 
 	 //defining times as a float so that shit doesen't hit the fan
-	 float times;
+	 var parseFloat(times);
 	 
 	 //Secrets
 	 var SatanConfirmed = false;
