--- a/index.html
+++ b/index.html
@@ -607,13 +607,13 @@ function getCookie(varNavn) {
 	 if (getCookie("barProg") === 0) {
 	 var barY = 0;
 	 } else {
-	 var barY = getCookie("barProg");
+	 var barY = parseInt(getCookie("barProg"));
 	 }
 	 
 	 if (getCookie("barProg2") === 0) {
 	 var barYPos = 420;
 	 } else {
-	 var barYPos = getCookie("barProg2");
+	 var barYPos = parseInt(getCookie("barProg2"));
 	 }
 	 
 	 if (getCookie("times") === 0) {
