--- a/index.html
+++ b/index.html
@@ -649,19 +649,19 @@ function getCookie(varNavn) {
 	butikpris =  parseInt( getCookie("butikpris"));
 	}
 	
-	if (getCookie("tvpris") === "0") {
+	if (getCookie("tvpris") === "0" || getCookie("tvpris") === "" ) {
 	
 	} else {
 	tvpris =  parseInt( getCookie("tvpris"));
 	}
 	
-	if (getCookie("avispris") === "0") {
+	if (getCookie("avispris") === "0" || getCookie("avispris") === "" ) {
 	
 	} else {
 	avispris =  parseInt( getCookie("avispris"));
 	}
 	
-	if (getCookie("skovpris") === "0") {
+	if (getCookie("skovpris") === "0" || getCookie("tvpris") === "" ) {
 	
 	} else {
 	skovpris =  parseInt( getCookie("skovpris"));
