--- a/index.html
+++ b/index.html
@@ -604,21 +604,21 @@ function getCookie(varNavn) {
 	 var SatanConfirmed = false;
 	 
 	 //Bar
-	 if (getCookie("barProg") === 0) {
+	 if (getCookie("barProg") === 0 || getCookie("barProg") === "") {
 	 var barY = 0;
 	 setCookie("barProg", barY);
 	 } else {
 	 var barY = parseInt(getCookie("barProg"));
 	 }
 	 
-	 if (getCookie("barProg2") === 0) {
+	 if (getCookie("barProg2") === 0 || getCookie("barProg2") === "") {
 	 var barYPos = 420;
 	 setCookie("barProg2", barYPos);
 	 } else {
 	 var barYPos = parseInt(getCookie("barProg2"));
 	 }
 	 
-	 if (getCookie("times") === 0) {
+	 if (getCookie("times") === 0 || getCookie("times") === "") {
 	 times = 0.25;
 	 } else {
 	 times = parseFloat(getCookie("times"));
