--- a/index.html
+++ b/index.html
@@ -724,6 +724,9 @@ function getCookie(varNavn) {
 		barY = 0;
 		barYPos = 420;
 		
+		setCookie("barProg", barY);
+		setCookie("barProg2", barYPos)
+		
 		setCookie("timeS", 0);
 		setCookie("timeM", 0);
 		setCookie("timeH", 0);
