--- a/index.html
+++ b/index.html
@@ -885,8 +885,9 @@ function getCookie(varNavn) {
 	var jarImg = loadImage("New_jar.png");
 
 	 /* @pjs preload="Money 1+.png"; */
-	var moneyImg = loadImage("Money 1+.png");
-	
+	//var moneyImg = loadImage("Money 1+.png");
+	var moneyImg = loadImage("Coins.png");
+
 	 /* @pjs preload="skov.png"; */
 	var skovImg = loadImage("skov.png");
 	
