--- a/index.html
+++ b/index.html
@@ -459,13 +459,13 @@ function getCookie(varNavn) {
 		
 		secondsInt = getCookie("timeS");
 		
-		if (getCookie("timesM") === "" || getCookie("timeM") === "0") {
+		if (getCookie("timeM") === "" || getCookie("timeM") === "0") {
 		var minutesInt = 0;
 		} else {
 		minutesInt = getCookie("timeM");
 		}
 		
-		if (getCookie("timesH") === "" || getCookie("timeM") === "0") {
+		if (getCookie("timeH") === "" || getCookie("timeM") === "0") {
 		var hoursInt = 0;
 		} else {
 		hoursInt = getCookie("timeH");
