--- a/index.html
+++ b/index.html
@@ -1088,6 +1088,7 @@ function getCookie(varNavn) {
 	 hoursInt++;
 	 minutesInt = 0;
 	 setCookie("timeH", hoursInt);
+	 setCookie("timeM", 0);
 	 }
 	 
 	  bigcoinCountdown = bigcoinCountdown - 1;
