--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ https://github.com/Team-Code/KA_Offline -->
 	<style>
 	
 	canvas:hover {
-	cursor: url("jar mus.png"), auto;
+	cursor: url("jar_mus.ico"), auto;
 	}
 	
 	#HeadlineJ {
@@ -1029,7 +1029,7 @@ function getCookie(varNavn) {
 	
 	var coin = coinsFalling[i];
 	
-	image(moneyImg, coin.x, coin.y, 160, 120);
+	image(moneyImg, coin.x, coin.y, 80, 60);
 	
 	coin.y += 10;
 
