--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@ function getCookie(varNavn) {
 	fill (0,0,0)
 	textSize(12);
 	text("Money: ₡"+ smoney, 280,20);
-	text("CPS: " + CPS2, 280, 40);
+	//text("CPS: " + CPS2, 280, 40);
 	
 	if (autoClicktime < millis() - autoClickTimestamp){
 	autoClickTimestamp = millis();
