--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@ function getCookie(varNavn) {
 	  barYPos -= 1/times;
 	  TimesClicked++;
 	  
-	  CPS += 1 + butiknumber*5 + skovnumber;
+	  //CPS += 1 + butiknumber*5 + skovnumber;
 	  
 	  //saves bar progress
 	  setCookie("barProg", parseInt(barY));
