--- a/index.html
+++ b/index.html
@@ -719,11 +719,11 @@ function getCookie(varNavn) {
 	 tvNumber += 99999999;
 	 shopNumber += 99999999;
 	 //edit pris
-	 avispris = "ERR 404 variable 'price' not found!";
-	 skovpris = "ERR 404 variable 'price' not found!";
-	 butikpris = "ERR 404 variable 'price' not found!";
-	 tvpris = "ERR 404 variable 'price' not found!";
-	 shoppris = "ERR 404 variable 'price' not found!";
+	 avispris = 0;
+	 skovpris = 0;
+	 butikpris = 0;
+	 tvpris = 0;
+	 shoppris = 0;
 	 
 	 }
 	 
