--- a/index.html
+++ b/index.html
@@ -712,12 +712,12 @@ function getCookie(varNavn) {
 	 
 	 if (mouseX < 5 && mouseY < 5 && shopON === true && creditOpen === true) {
 	 //edit to MADDNEESSS!
-	 avisNumber += 999999999999;
-	 money += 99999999;
-	 skovNumber += 999999;
-	 butikNumber += 9999999;
-	 tvNumber += 99999999;
-	 shopNumber += 99999999;
+	 avisNumber = 99999;
+	 money = 99999;
+	 skovNumber = 99999;
+	 butikNumber = 99999;
+	 tvNumber = 99999;
+	 shopNumber = 99999;
 	 //edit pris
 	 avispris = 0;
 	 skovpris = 0;
