--- a/index.html
+++ b/index.html
@@ -1161,22 +1161,22 @@ function getCookie(varNavn) {
 		fill(forrestRed, forrestGreen, 0);
 		text("₡" + numeral(skovpris).format("0.0a"),430,405);
 		fill(0,0,0);
-		text("Forrests:  " + skovNumber,15,15);
+		text("Forrests:  " + numeral(skovNumber).format("0,0"),15,15);
 		image(StandNew,410,208,70,80);
 		fill(butikRed, butikGreen, 0);
 		text ("₡" + numeral(butikpris).format("0.0a"),425,300);
 		fill(0,0,0);
-		text("Stands:  " + butikNumber,15,35);
+		text("Stands:  " + numeral(butikNumber).format("0,0"),15,35);
 		image(avisImg,390,110,100,80);
 		fill(avisRed, avisGreen, 0);
 		text ("₡" + numeral(avispris).format("0.0a"),430,200);
 		fill(0,0,0);
-		text("Newspapers:  " + avisNumber,15,55);
+		text("Newspapers:  " + numeral(avisNumber).format("0,0"),15,55);
 		image(tvImg,374,10,150,100);
 		fill(tvRed, tvGreen, 0);
 		text("₡" + numeral(tvpris).format("0.0a"),425,100);
 		fill(0,0,0);
-		text("Tvs:  " + tvNumber,15,75);
+		text("Tvs:  " + numeral(tvNumber).format("0,0"),15,75);
 		image(infoImg,345,340,30,30);
 		image(infoImg,345,230,30,30);
 		image(infoImg,345,130,30,30);
