--- a/index.html
+++ b/index.html
@@ -707,6 +707,9 @@ function getCookie(varNavn) {
 	 //timer
 	 var autoClicktime = 1000; //millis()
 	 var autoClickTimestamp = millis();
+
+	 var autoClicktimeM = 1000 / 100; //millis()
+	 var autoClickTimestampM = millis();
 	 
 	 var mouseClicked = function(){
 	 
@@ -1067,8 +1070,6 @@ function getCookie(varNavn) {
 	//text("CPS: " + CPS2, 280, 40);
 	
 	if (autoClicktime < millis() - autoClickTimestamp){
-	autoClickTimestamp = millis();
-	money += (5 * avisNumber) + (50 * tvNumber) ;
 	setCookie("money", secondsInt)
 	secondsInt++;
 	setCookie("timeS", secondsInt);
@@ -1085,6 +1086,11 @@ function getCookie(varNavn) {
 	}
 	CPS = 0;
 	}  
+
+	if (autoClicktimeM < millis() - autoClickTimestampM){
+	autoClickTimestamp = millis();
+	money += (5/100 * avisNumber) + (50/100 * tvNumber) ;
+	}
 	
 	for (var i = coinListX.length -1; i >= 0; i--){
 	
